# f1-telemtry-event-processor

./: .env.example  .gitignore  README.md  docs_component-architecture.md  docs_event-processor-implementation-plan.md  docs_telemetry-event-spec.md  pyproject.toml
src/ep/: __init__.py  app.py  config.py
src/ep/bus/: __init__.py  codec_msgpack.py  redis_publisher.py  redis_subscriber.py
src/ep/contracts/: envelope.py  outputs.py
src/ep/diagnostics/: counters.py  heartbeat.py
src/ep/pipeline/: orchestrator.py  router.py
src/ep/processors/: car_metrics_processor.py  lap_metrics_processor.py  patch_emitter.py  tyre_metrics_processor.py
src/ep/state/: session_guard.py  snapshot_store.py
tests/unit/: test_app.py  test_car_metrics_processor.py  test_codec_msgpack.py  test_envelope_validation.py  test_lap_metrics_processor.py  test_orchestrator.py  test_outputs.py  test_patch_emitter.py  test_router.py  test_session_guard.py  test_snapshot_store.py  test_tyre_metrics_processor.py
